--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 pandas = "^2.2.3"
+pyyaml = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -17,6 +18,7 @@ mypy = "^1.14.0"
 pytest = "^8.3.4"
 pre-commit = "^4.0.1"
 ipykernel = "^6.29.5"
+types-pyyaml = "^6.0.12.20241221"
 
 [build-system]
 requires = ["poetry-core"]
