--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ line-length = 120
 target-version = "py313"
 
 [tool.ruff.lint]
-select = ["E", "F", "C", "N", "D101", "D102", "D103"]
+select = ["I", "E", "F", "C", "N", "D101", "D102", "D103"]
 
 [tool.mypy]
 exclude = ["notebooks/"]
