first working version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
     ],
     "python.testing.pytestArgs": [
         "tests/"
-    ]
+    ],
+    "python.terminal.activateEnvInCurrentTerminal": true
 }
