--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,15 @@ authors = ["jm-glowienke <jmglowienke@gmail.com>"]
 license = "GPL-3.0"
 readme = "README.md"
 
+[tool.poetry.scripts]
+fluffy-dash = "fluffy_octo_spoon.dashboard:main"
+
 [tool.poetry.dependencies]
 python = "^3.13"
 pandas = "^2.2.3"
 pyyaml = "^6.0.2"
+plotly = "^5.24.1"
+dash = "^2.18.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,6 +24,7 @@ pytest = "^8.3.4"
 pre-commit = "^4.0.1"
 ipykernel = "^6.29.5"
 types-pyyaml = "^6.0.12.20241221"
+pandas-stubs = "^2.2.3.241126"
 
 [build-system]
 requires = ["poetry-core"]
@@ -32,4 +38,4 @@ target-version = "py313"
 select = ["I", "E", "F", "C", "N", "D101", "D102", "D103"]
 
 [tool.mypy]
-exclude = ["notebooks/"]
+exclude = ["notebooks/", "dashboard.py"]
