--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^2.2.3"
 pyyaml = "^6.0.2"
 plotly = "^5.24.1"
 dash = "^2.18.2"
+typer = "^0.15.1"
 
 
 [tool.poetry.group.dev.dependencies]
